# davebase

./: .gitignore  Cargo.toml  README.md  alkwjdla  auto-testfile.txt  new_file.txt  rust.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  test.rs
