[package]
name = "davebase"
version = "0.1.0"
authors = ["Dave Filion <dave.filion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
chrono = "0.4.11"
log = "0.4.8"
env_logger = "0.7.1"
dotenv = "0.15.0"
rand = "0.7.3"


